# dynamorio-experiment

./: CMakeLists.txt  concolic.thrift  concrete_eval.cpp  helpers.cpp  helpers.hpp  myclient.c  myclient.cpp  options.cpp  options.hpp
gen-cpp/: ConcreteEvaluator.cpp  ConcreteEvaluator.h  ConcreteEvaluator_server.cpp  ConcreteEvaluator_server.skeleton.cpp  concolic_constants.cpp  concolic_constants.h  concolic_types.cpp  concolic_types.h
